# parity-signer

./: README.md
android/app/src/main/java/io/parity/signer/: EthkeyBridge.java
ios/NativeSigner/: EthkeyBridge.swift
rust/signer/: Cargo.toml
rust/signer/src/: brain.rs  eth.rs  lib.rs  strate.rs  string.rs
src/: constants.js
src/util/: native.js
